# cc

./: .gitignore  Anchor.toml  COMPLETE_BUILD_SUMMARY.md  CONTRACTS_README.md  Cargo.toml  MVP_SUMMARY.md  package-lock.json  package.json
prisma/: schema.prisma
programs/carbon-credits/: Cargo.toml
programs/carbon-credits/src/: lib.rs
programs/dutch-auction/: Cargo.toml
programs/dutch-auction/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/count/: route.ts
src/app/api/waitlists/: route.ts
src/app/auctions/: page.tsx
src/app/dashboard/: page.tsx
src/app/history/: page.tsx
src/app/marketplace/: page.tsx
src/app/onboard/: page.tsx
src/app/report/: page.tsx
src/components/: about.tsx  bleh.tsx  faq.tsx  features.tsx  footer.tsx  hero.tsx  navigation.tsx  onboarding.tsx  waitlist.tsx  wallet-button.tsx
src/providers/: SolanaWalletProvider.tsx
