[package]
name = "carbon-credits"
version = "0.1.0"
description = "Carbon Credit Token (CCT) program for CarbonOnChain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "carbon_credits"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
